--- a/templates/index.html
+++ b/templates/index.html
@@ -129,8 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="4.bp.blogspot.com/-kCX03iIcbyg/UNPK1BUyNbI/AAAAAAAADMQ/fKXgr_6ewLE/s1600/baby-koala-bear.jpg
-" class="img-responsive" alt="Circus tent">
+                        <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwjo-qb174zjAhVFLn0KHYHyC3UQjRx6BAgBEAU&url=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Fkoala%2520bear%2F&psig=AOvVaw3u1FfKMhjwXYtAksALZ6RQ&ust=1561835267299457" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
